--- a/static/dest/css/index.css
+++ b/static/dest/css/index.css
@@ -1,4 +1,4 @@
-.nav{
+/**.nav{
     position: fixed;
     top: 0;
     left: 0;
@@ -7,11 +7,13 @@
     height: 3em;
     box-shadow: 0 2px 3px #000000;
     background-color: #ffffff;
+}**/
+.navRightAlignWrapper{
+    position: absolute;
+    bottom: 10px;
+    right: 20px;
 }
 .loginBtn{
-    position: absolute;
-    right: 10px;
-    top: 10px;
 
 }
 .title{
@@ -30,15 +32,31 @@
     height: 12em;
     margin: 1em;
     padding: 0.5em;
-    background-color: #ff0000;
+    background-color: #ff7777;
 }
 .author{
     font-size: 2em;
     margin: 0;
 }
-.loginPopup{
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    padding: 15%;
+.popup{
+    position: absolute;
+    left: auto;right: auto;
+    text-align: center;
+    box-shadow: 5px 5px #000000;
+    padding: 20px;
+    background-color: #555555ee;
+}
+.loginUsernameBox{
+
+}
+.loginPasswordBox{
+
+}
+button{
+    border: solid 1.5px black;
+    background-color: none;
+    padding: 5px 20px;
+}
+.loginBoxBtn{
+    padding: 10px 30px;
 }
